@@ -4,7 +4,6 @@
 
 package io.airbyte.integrations.destination.snowflake;
 
-import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -15,20 +14,18 @@ import io.airbyte.commons.io.IOs;
 import io.airbyte.commons.json.Jsons;
 import io.airbyte.commons.resources.MoreResources;
 import io.airbyte.commons.string.Strings;
-import io.airbyte.config.StandardCheckConnectionOutput;
 import io.airbyte.config.StandardCheckConnectionOutput.Status;
 import io.airbyte.db.factory.DataSourceFactory;
 import io.airbyte.db.jdbc.JdbcDatabase;
 import io.airbyte.integrations.base.JavaBaseConstants;
 import io.airbyte.integrations.destination.NamingConventionTransformer;
+import io.airbyte.integrations.standardtest.destination.DataArgumentsProvider;
 import io.airbyte.integrations.standardtest.destination.DestinationAcceptanceTest;
-import io.airbyte.integrations.standardtest.destination.argproviders.DataArgumentsProvider;
 import io.airbyte.integrations.standardtest.destination.comparator.TestDataComparator;
-import io.airbyte.protocol.models.v0.AirbyteCatalog;
-import io.airbyte.protocol.models.v0.AirbyteConnectionStatus;
-import io.airbyte.protocol.models.v0.AirbyteMessage;
-import io.airbyte.protocol.models.v0.CatalogHelpers;
-import io.airbyte.protocol.models.v0.ConfiguredAirbyteCatalog;
+import io.airbyte.protocol.models.AirbyteCatalog;
+import io.airbyte.protocol.models.AirbyteMessage;
+import io.airbyte.protocol.models.CatalogHelpers;
+import io.airbyte.protocol.models.ConfiguredAirbyteCatalog;
 import java.nio.file.Path;
 import java.sql.ResultSet;
 import java.sql.SQLException;
@@ -43,11 +40,6 @@ import org.junit.jupiter.params.provider.ArgumentsSource;
 public class SnowflakeInsertDestinationAcceptanceTest extends DestinationAcceptanceTest {
 
   private static final NamingConventionTransformer NAME_TRANSFORMER = new SnowflakeSQLNameTransformer();
-  protected static final String NO_ACTIVE_WAREHOUSE_ERR_MSG =
-      "No active warehouse selected in the current session.  Select an active warehouse with the 'use warehouse' command.";
-
-  protected static final String NO_USER_PRIVILEGES_ERR_MSG =
-      "Encountered Error with Snowflake Configuration: Current role does not have permissions on the target schema please verify your privileges";
 
   // this config is based on the static config, and it contains a random
   // schema name that is different for each test run
@@ -112,6 +104,16 @@ public class SnowflakeInsertDestinationAcceptanceTest extends DestinationAccepta
   }
 
   @Override
+  protected boolean supportsNormalization() {
+    return true;
+  }
+
+  @Override
+  protected boolean supportsDBT() {
+    return true;
+  }
+
+  @Override
   protected boolean implementsNamespaces() {
     return true;
   }
@@ -141,7 +143,7 @@ public class SnowflakeInsertDestinationAcceptanceTest extends DestinationAccepta
     return database.bufferedResultSetQuery(
         connection -> {
           try (final ResultSet tableInfo = connection.createStatement()
-              .executeQuery(String.format("SHOW TABLES LIKE '%s' IN SCHEMA %s;", tableName, schema))) {
+              .executeQuery(String.format("SHOW TABLES LIKE '%s' IN SCHEMA %s;", tableName, schema));) {
             assertTrue(tableInfo.next());
             // check that we're creating permanent tables. DBT defaults to transient tables, which have
             // `TRANSIENT` as the value for the `kind` column.
@@ -163,7 +165,7 @@ public class SnowflakeInsertDestinationAcceptanceTest extends DestinationAccepta
     this.config = Jsons.clone(getStaticConfig());
     ((ObjectNode) config).put("schema", schemaName);
 
-    dataSource = SnowflakeDatabase.createDataSource(config, OssCloudEnvVarConsts.AIRBYTE_OSS);
+    dataSource = SnowflakeDatabase.createDataSource(config);
     database = SnowflakeDatabase.getDatabase(dataSource);
     database.execute(createSchemaQuery);
   }
@@ -173,30 +175,6 @@ public class SnowflakeInsertDestinationAcceptanceTest extends DestinationAccepta
     final String createSchemaQuery = String.format("DROP SCHEMA IF EXISTS %s", config.get("schema").asText());
     database.execute(createSchemaQuery);
     DataSourceFactory.close(dataSource);
-  }
-
-  @Test
-  public void testCheckWithNoActiveWarehouseConnection() throws Exception {
-    // Config to user(creds) that has no warehouse assigned
-    final JsonNode config = Jsons.deserialize(IOs.readFile(
-        Path.of("secrets/internal_staging_config_no_active_warehouse.json")));
-
-    StandardCheckConnectionOutput standardCheckConnectionOutput = runCheck(config);
-
-    assertEquals(Status.FAILED, standardCheckConnectionOutput.getStatus());
-    assertThat(standardCheckConnectionOutput.getMessage()).contains(NO_ACTIVE_WAREHOUSE_ERR_MSG);
-  }
-
-  @Test
-  public void testCheckWithNoTextSchemaPermissionConnection() throws Exception {
-    // Config to user (creds) that has no permission to schema
-    final JsonNode config = Jsons.deserialize(IOs.readFile(
-        Path.of("secrets/config_no_text_schema_permission.json")));
-
-    StandardCheckConnectionOutput standardCheckConnectionOutput = runCheck(config);
-
-    assertEquals(Status.FAILED, standardCheckConnectionOutput.getStatus());
-    assertThat(standardCheckConnectionOutput.getMessage()).contains(NO_USER_PRIVILEGES_ERR_MSG);
   }
 
   @Test
@@ -210,13 +188,6 @@ public class SnowflakeInsertDestinationAcceptanceTest extends DestinationAccepta
     assertEquals(Status.SUCCEEDED, runCheckWithCatchedException(deprecatedStyleConfig));
   }
 
-  @Test
-  void testCheckWithKeyPairAuth() throws Exception {
-    final JsonNode credentialsJsonString = Jsons.deserialize(IOs.readFile(Path.of("secrets/config_key_pair.json")));
-    final AirbyteConnectionStatus check = new SnowflakeDestination(OssCloudEnvVarConsts.AIRBYTE_OSS).check(credentialsJsonString);
-    assertEquals(AirbyteConnectionStatus.Status.SUCCEEDED, check.getStatus());
-  }
-
   /**
    * This test is disabled because it is very slow, and should only be run manually for now.
    */
@@ -227,7 +198,7 @@ public class SnowflakeInsertDestinationAcceptanceTest extends DestinationAccepta
     final AirbyteCatalog catalog = Jsons.deserialize(MoreResources.readResource(catalogFilename), AirbyteCatalog.class);
     final ConfiguredAirbyteCatalog configuredCatalog = CatalogHelpers.toDefaultConfiguredCatalog(catalog);
     final List<AirbyteMessage> messages = MoreResources.readResource(messagesFilename).lines()
-        .map(record -> Jsons.deserialize(record, AirbyteMessage.class)).toList();
+        .map(record -> Jsons.deserialize(record, AirbyteMessage.class)).collect(Collectors.toList());
 
     final List<AirbyteMessage> largeNumberRecords =
         Collections.nCopies(15000000, messages).stream().flatMap(List::stream).collect(Collectors.toList());
