@@ -4,11 +4,8 @@
 
 package io.airbyte.integrations.source.jdbc.test;
 
-import static io.airbyte.db.jdbc.JdbcUtils.getDefaultSourceOperations;
-import static io.airbyte.integrations.source.relationaldb.RelationalDbQueryUtils.enquoteIdentifier;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.doCallRealMethod;
@@ -16,6 +13,10 @@ import static org.mockito.Mockito.spy;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Lists;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import io.airbyte.commons.json.Jsons;
 import io.airbyte.commons.resources.MoreResources;
@@ -29,35 +30,30 @@ import io.airbyte.db.jdbc.StreamingJdbcDatabase;
 import io.airbyte.db.jdbc.streaming.AdaptiveStreamingQueryConfig;
 import io.airbyte.integrations.base.Source;
 import io.airbyte.integrations.source.jdbc.AbstractJdbcSource;
-import io.airbyte.integrations.source.relationaldb.RelationalDbQueryUtils;
 import io.airbyte.integrations.source.relationaldb.models.DbState;
 import io.airbyte.integrations.source.relationaldb.models.DbStreamState;
+import io.airbyte.protocol.models.AirbyteCatalog;
+import io.airbyte.protocol.models.AirbyteConnectionStatus;
+import io.airbyte.protocol.models.AirbyteConnectionStatus.Status;
+import io.airbyte.protocol.models.AirbyteMessage;
+import io.airbyte.protocol.models.AirbyteMessage.Type;
+import io.airbyte.protocol.models.AirbyteRecordMessage;
+import io.airbyte.protocol.models.AirbyteStateMessage;
+import io.airbyte.protocol.models.AirbyteStream;
+import io.airbyte.protocol.models.CatalogHelpers;
+import io.airbyte.protocol.models.ConfiguredAirbyteCatalog;
+import io.airbyte.protocol.models.ConfiguredAirbyteStream;
+import io.airbyte.protocol.models.ConnectorSpecification;
+import io.airbyte.protocol.models.DestinationSyncMode;
 import io.airbyte.protocol.models.Field;
 import io.airbyte.protocol.models.JsonSchemaType;
-import io.airbyte.protocol.models.v0.AirbyteCatalog;
-import io.airbyte.protocol.models.v0.AirbyteConnectionStatus;
-import io.airbyte.protocol.models.v0.AirbyteConnectionStatus.Status;
-import io.airbyte.protocol.models.v0.AirbyteMessage;
-import io.airbyte.protocol.models.v0.AirbyteMessage.Type;
-import io.airbyte.protocol.models.v0.AirbyteRecordMessage;
-import io.airbyte.protocol.models.v0.AirbyteStateMessage;
-import io.airbyte.protocol.models.v0.AirbyteStateMessage.AirbyteStateType;
-import io.airbyte.protocol.models.v0.AirbyteStream;
-import io.airbyte.protocol.models.v0.AirbyteStreamState;
-import io.airbyte.protocol.models.v0.CatalogHelpers;
-import io.airbyte.protocol.models.v0.ConfiguredAirbyteCatalog;
-import io.airbyte.protocol.models.v0.ConfiguredAirbyteStream;
-import io.airbyte.protocol.models.v0.ConnectorSpecification;
-import io.airbyte.protocol.models.v0.DestinationSyncMode;
-import io.airbyte.protocol.models.v0.StreamDescriptor;
-import io.airbyte.protocol.models.v0.SyncMode;
+import io.airbyte.protocol.models.SyncMode;
 import java.math.BigDecimal;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
@@ -86,16 +82,12 @@ public abstract class JdbcSourceAcceptanceTest {
   // otherwise parallel runs can interfere with each other
   public static String SCHEMA_NAME = Strings.addRandomSuffix("jdbc_integration_test1", "_", 5).toLowerCase();
   public static String SCHEMA_NAME2 = Strings.addRandomSuffix("jdbc_integration_test2", "_", 5).toLowerCase();
-  public static Set<String> TEST_SCHEMAS = Set.of(SCHEMA_NAME, SCHEMA_NAME2);
+  public static Set<String> TEST_SCHEMAS = ImmutableSet.of(SCHEMA_NAME, SCHEMA_NAME2);
 
   public static String TABLE_NAME = "id_and_name";
   public static String TABLE_NAME_WITH_SPACES = "id and name";
   public static String TABLE_NAME_WITHOUT_PK = "id_and_name_without_pk";
   public static String TABLE_NAME_COMPOSITE_PK = "full_name_composite_pk";
-  public static String TABLE_NAME_WITHOUT_CURSOR_TYPE = "table_without_cursor_type";
-  public static String TABLE_NAME_WITH_NULLABLE_CURSOR_TYPE = "table_with_null_cursor_type";
-  // this table is used in testing incremental sync with concurrent insertions
-  public static String TABLE_NAME_AND_TIMESTAMP = "name_and_timestamp";
 
   public static String COL_ID = "id";
   public static String COL_NAME = "name";
@@ -103,9 +95,6 @@ public abstract class JdbcSourceAcceptanceTest {
   public static String COL_FIRST_NAME = "first_name";
   public static String COL_LAST_NAME = "last_name";
   public static String COL_LAST_NAME_WITH_SPACE = "last name";
-  public static String COL_CURSOR = "cursor_field";
-  public static String COL_TIMESTAMP = "timestamp";
-  public static String COL_TIMESTAMP_TYPE = "TIMESTAMP";
   public static Number ID_VALUE_1 = 1;
   public static Number ID_VALUE_2 = 2;
   public static Number ID_VALUE_3 = 3;
@@ -113,16 +102,9 @@ public abstract class JdbcSourceAcceptanceTest {
   public static Number ID_VALUE_5 = 5;
 
   public static String DROP_SCHEMA_QUERY = "DROP SCHEMA IF EXISTS %s CASCADE";
-  public static String COLUMN_CLAUSE_WITH_PK = "id INTEGER, name VARCHAR(200) NOT NULL, updated_at DATE NOT NULL";
-  public static String COLUMN_CLAUSE_WITHOUT_PK = "id INTEGER, name VARCHAR(200) NOT NULL, updated_at DATE NOT NULL";
-  public static String COLUMN_CLAUSE_WITH_COMPOSITE_PK =
-      "first_name VARCHAR(200) NOT NULL, last_name VARCHAR(200) NOT NULL, updated_at DATE NOT NULL";
-
-  public static String CREATE_TABLE_WITHOUT_CURSOR_TYPE_QUERY = "CREATE TABLE %s (%s bit NOT NULL);";
-  public static String INSERT_TABLE_WITHOUT_CURSOR_TYPE_QUERY = "INSERT INTO %s VALUES(0);";
-  public static String CREATE_TABLE_WITH_NULLABLE_CURSOR_TYPE_QUERY = "CREATE TABLE %s (%s VARCHAR(20));";
-  public static String INSERT_TABLE_WITH_NULLABLE_CURSOR_TYPE_QUERY = "INSERT INTO %s VALUES('Hello world :)');";
-  public static String INSERT_TABLE_NAME_AND_TIMESTAMP_QUERY = "INSERT INTO %s (name, timestamp) VALUES ('%s', '%s')";
+  public static String COLUMN_CLAUSE_WITH_PK = "id INTEGER, name VARCHAR(200), updated_at DATE";
+  public static String COLUMN_CLAUSE_WITHOUT_PK = "id INTEGER, name VARCHAR(200), updated_at DATE";
+  public static String COLUMN_CLAUSE_WITH_COMPOSITE_PK = "first_name VARCHAR(200), last_name VARCHAR(200), updated_at DATE";
 
   public JsonNode config;
   public DataSource dataSource;
@@ -186,7 +168,7 @@ public abstract class JdbcSourceAcceptanceTest {
   }
 
   protected JdbcSourceOperations getSourceOperations() {
-    return getDefaultSourceOperations();
+    return new JdbcSourceOperations();
   }
 
   protected String createTableQuery(final String tableName, final String columnClause, final String primaryKeyClause) {
@@ -223,14 +205,14 @@ public abstract class JdbcSourceAcceptanceTest {
     streamName = TABLE_NAME;
 
     dataSource = DataSourceFactory.create(
-        jdbcConfig.get(JdbcUtils.USERNAME_KEY).asText(),
-        jdbcConfig.has(JdbcUtils.PASSWORD_KEY) ? jdbcConfig.get(JdbcUtils.PASSWORD_KEY).asText() : null,
+        jdbcConfig.get("username").asText(),
+        jdbcConfig.has("password") ? jdbcConfig.get("password").asText() : null,
         getDriverClass(),
-        jdbcConfig.get(JdbcUtils.JDBC_URL_KEY).asText(),
-        JdbcUtils.parseJdbcParameters(jdbcConfig, JdbcUtils.CONNECTION_PROPERTIES_KEY, getJdbcParameterDelimiter()));
+        jdbcConfig.get("jdbc_url").asText(),
+        JdbcUtils.parseJdbcParameters(jdbcConfig, "connection_properties", getJdbcParameterDelimiter()));
 
     database = new StreamingJdbcDatabase(dataSource,
-        getDefaultSourceOperations(),
+        JdbcUtils.getDefaultSourceOperations(),
         AdaptiveStreamingQueryConfig::new);
 
     if (supportsSchemas()) {
@@ -273,7 +255,7 @@ public abstract class JdbcSourceAcceptanceTest {
       connection.createStatement().execute(
           createTableQuery(getFullyQualifiedTableName(TABLE_NAME_COMPOSITE_PK),
               COLUMN_CLAUSE_WITH_COMPOSITE_PK,
-              primaryKeyClause(List.of("first_name", "last_name"))));
+              primaryKeyClause(ImmutableList.of("first_name", "last_name"))));
       connection.createStatement().execute(
           String.format(
               "INSERT INTO %s(first_name, last_name, updated_at) VALUES ('first' ,'picard', '2004-10-19')",
@@ -312,7 +294,7 @@ public abstract class JdbcSourceAcceptanceTest {
 
   @Test
   void testCheckFailure() throws Exception {
-    ((ObjectNode) config).put(JdbcUtils.PASSWORD_KEY, "fake");
+    ((ObjectNode) config).put("password", "fake");
     final AirbyteConnectionStatus actual = source.check(config);
     assertEquals(Status.FAILED, actual.getStatus());
   }
@@ -330,42 +312,6 @@ public abstract class JdbcSourceAcceptanceTest {
       assertTrue(expectedStream.isPresent(), String.format("Unexpected stream %s", actualStream.getName()));
       assertEquals(expectedStream.get(), actualStream);
     });
-  }
-
-  @Test
-  protected void testDiscoverWithNonCursorFields() throws Exception {
-    database.execute(connection -> {
-      connection.createStatement()
-          .execute(String.format(CREATE_TABLE_WITHOUT_CURSOR_TYPE_QUERY, getFullyQualifiedTableName(TABLE_NAME_WITHOUT_CURSOR_TYPE), COL_CURSOR));
-      connection.createStatement().execute(String.format(INSERT_TABLE_WITHOUT_CURSOR_TYPE_QUERY,
-          getFullyQualifiedTableName(TABLE_NAME_WITHOUT_CURSOR_TYPE)));
-    });
-    final AirbyteCatalog actual = filterOutOtherSchemas(source.discover(config));
-    final AirbyteStream stream =
-        actual.getStreams().stream().filter(s -> s.getName().equalsIgnoreCase(TABLE_NAME_WITHOUT_CURSOR_TYPE)).findFirst().orElse(null);
-    assertNotNull(stream);
-    assertEquals(TABLE_NAME_WITHOUT_CURSOR_TYPE.toLowerCase(), stream.getName().toLowerCase());
-    assertEquals(1, stream.getSupportedSyncModes().size());
-    assertEquals(SyncMode.FULL_REFRESH, stream.getSupportedSyncModes().get(0));
-  }
-
-  @Test
-  protected void testDiscoverWithNullableCursorFields() throws Exception {
-    database.execute(connection -> {
-      connection.createStatement()
-          .execute(String.format(CREATE_TABLE_WITH_NULLABLE_CURSOR_TYPE_QUERY, getFullyQualifiedTableName(TABLE_NAME_WITH_NULLABLE_CURSOR_TYPE),
-              COL_CURSOR));
-      connection.createStatement().execute(String.format(INSERT_TABLE_WITH_NULLABLE_CURSOR_TYPE_QUERY,
-          getFullyQualifiedTableName(TABLE_NAME_WITH_NULLABLE_CURSOR_TYPE)));
-    });
-    final AirbyteCatalog actual = filterOutOtherSchemas(source.discover(config));
-    final AirbyteStream stream =
-        actual.getStreams().stream().filter(s -> s.getName().equalsIgnoreCase(TABLE_NAME_WITH_NULLABLE_CURSOR_TYPE)).findFirst().orElse(null);
-    assertNotNull(stream);
-    assertEquals(TABLE_NAME_WITH_NULLABLE_CURSOR_TYPE.toLowerCase(), stream.getName().toLowerCase());
-    assertEquals(2, stream.getSupportedSyncModes().size());
-    assertTrue(stream.getSupportedSyncModes().contains(SyncMode.FULL_REFRESH));
-    assertTrue(stream.getSupportedSyncModes().contains(SyncMode.INCREMENTAL));
   }
 
   protected AirbyteCatalog filterOutOtherSchemas(final AirbyteCatalog catalog) {
@@ -392,31 +338,28 @@ public abstract class JdbcSourceAcceptanceTest {
     // add table and data to a separate schema.
     database.execute(connection -> {
       connection.createStatement().execute(
-          String.format("CREATE TABLE %s(id VARCHAR(200) NOT NULL, name VARCHAR(200) NOT NULL)",
-              RelationalDbQueryUtils.getFullyQualifiedTableName(SCHEMA_NAME2, TABLE_NAME)));
+          String.format("CREATE TABLE %s(id VARCHAR(200), name VARCHAR(200))",
+              sourceOperations.getFullyQualifiedTableName(SCHEMA_NAME2, TABLE_NAME)));
       connection.createStatement()
           .execute(String.format("INSERT INTO %s(id, name) VALUES ('1','picard')",
-              RelationalDbQueryUtils.getFullyQualifiedTableName(SCHEMA_NAME2, TABLE_NAME)));
+              sourceOperations.getFullyQualifiedTableName(SCHEMA_NAME2, TABLE_NAME)));
       connection.createStatement()
           .execute(String.format("INSERT INTO %s(id, name) VALUES ('2', 'crusher')",
-              RelationalDbQueryUtils.getFullyQualifiedTableName(SCHEMA_NAME2, TABLE_NAME)));
+              sourceOperations.getFullyQualifiedTableName(SCHEMA_NAME2, TABLE_NAME)));
       connection.createStatement()
           .execute(String.format("INSERT INTO %s(id, name) VALUES ('3', 'vash')",
-              RelationalDbQueryUtils.getFullyQualifiedTableName(SCHEMA_NAME2, TABLE_NAME)));
+              sourceOperations.getFullyQualifiedTableName(SCHEMA_NAME2, TABLE_NAME)));
     });
 
     final AirbyteCatalog actual = source.discover(config);
 
     final AirbyteCatalog expected = getCatalog(getDefaultNamespace());
-    final List<AirbyteStream> catalogStreams = new ArrayList<>();
-    catalogStreams.addAll(expected.getStreams());
-    catalogStreams.add(CatalogHelpers
+    expected.getStreams().add(CatalogHelpers
         .createAirbyteStream(TABLE_NAME,
             SCHEMA_NAME2,
             Field.of(COL_ID, JsonSchemaType.STRING),
             Field.of(COL_NAME, JsonSchemaType.STRING))
-        .withSupportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL)));
-    expected.setStreams(catalogStreams);
+        .withSupportedSyncModes(Lists.newArrayList(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL)));
     // sort streams by name so that we are comparing lists with the same order.
     final Comparator<AirbyteStream> schemaTableCompare = Comparator.comparing(stream -> stream.getNamespace() + "." + stream.getName());
     expected.getStreams().sort(schemaTableCompare);
@@ -445,13 +388,6 @@ public abstract class JdbcSourceAcceptanceTest {
 
     setEmittedAtToNull(actualMessages);
 
-    final List<AirbyteMessage> expectedMessages = getAirbyteMessagesReadOneColumn();
-    assertEquals(expectedMessages.size(), actualMessages.size());
-    assertTrue(expectedMessages.containsAll(actualMessages));
-    assertTrue(actualMessages.containsAll(expectedMessages));
-  }
-
-  protected List<AirbyteMessage> getAirbyteMessagesReadOneColumn() {
     final List<AirbyteMessage> expectedMessages = getTestMessages().stream()
         .map(Jsons::clone)
         .peek(m -> {
@@ -461,7 +397,9 @@ public abstract class JdbcSourceAcceptanceTest {
               convertIdBasedOnDatabase(m.getRecord().getData().get(COL_ID).asInt()));
         })
         .collect(Collectors.toList());
-    return expectedMessages;
+    assertTrue(expectedMessages.size() == actualMessages.size());
+    assertTrue(expectedMessages.containsAll(actualMessages));
+    assertTrue(actualMessages.containsAll(expectedMessages));
   }
 
   @Test
@@ -494,7 +432,18 @@ public abstract class JdbcSourceAcceptanceTest {
           Field.of(COL_ID, JsonSchemaType.NUMBER),
           Field.of(COL_NAME, JsonSchemaType.STRING)));
 
-      expectedMessages.addAll(getAirbyteMessagesSecondSync(streamName2));
+      final List<AirbyteMessage> secondStreamExpectedMessages = getTestMessages()
+          .stream()
+          .map(Jsons::clone)
+          .peek(m -> {
+            m.getRecord().setStream(streamName2);
+            m.getRecord().setNamespace(getDefaultNamespace());
+            ((ObjectNode) m.getRecord().getData()).remove(COL_UPDATED_AT);
+            ((ObjectNode) m.getRecord().getData()).replace(COL_ID,
+                convertIdBasedOnDatabase(m.getRecord().getData().get(COL_ID).asInt()));
+          })
+          .collect(Collectors.toList());
+      expectedMessages.addAll(secondStreamExpectedMessages);
     }
 
     final List<AirbyteMessage> actualMessages = MoreIterators
@@ -502,24 +451,9 @@ public abstract class JdbcSourceAcceptanceTest {
 
     setEmittedAtToNull(actualMessages);
 
-    assertEquals(expectedMessages.size(), actualMessages.size());
+    assertTrue(expectedMessages.size() == actualMessages.size());
     assertTrue(expectedMessages.containsAll(actualMessages));
     assertTrue(actualMessages.containsAll(expectedMessages));
-  }
-
-  protected List<AirbyteMessage> getAirbyteMessagesSecondSync(final String streamName2) {
-    return getTestMessages()
-        .stream()
-        .map(Jsons::clone)
-        .peek(m -> {
-          m.getRecord().setStream(streamName2);
-          m.getRecord().setNamespace(getDefaultNamespace());
-          ((ObjectNode) m.getRecord().getData()).remove(COL_UPDATED_AT);
-          ((ObjectNode) m.getRecord().getData()).replace(COL_ID,
-              convertIdBasedOnDatabase(m.getRecord().getData().get(COL_ID).asInt()));
-        })
-        .collect(Collectors.toList());
-
   }
 
   @Test
@@ -527,7 +461,7 @@ public abstract class JdbcSourceAcceptanceTest {
     final ConfiguredAirbyteStream streamForTableWithSpaces = createTableWithSpaces();
 
     final ConfiguredAirbyteCatalog catalog = new ConfiguredAirbyteCatalog()
-        .withStreams(List.of(
+        .withStreams(Lists.newArrayList(
             getConfiguredCatalogWithOneStream(getDefaultNamespace()).getStreams().get(0),
             streamForTableWithSpaces));
     final List<AirbyteMessage> actualMessages = MoreIterators
@@ -535,16 +469,7 @@ public abstract class JdbcSourceAcceptanceTest {
 
     setEmittedAtToNull(actualMessages);
 
-    final List<AirbyteMessage> expectedMessages = new ArrayList<>(getTestMessages());
-    expectedMessages.addAll(getAirbyteMessagesForTablesWithQuoting(streamForTableWithSpaces));
-
-    assertEquals(expectedMessages.size(), actualMessages.size());
-    assertTrue(expectedMessages.containsAll(actualMessages));
-    assertTrue(actualMessages.containsAll(expectedMessages));
-  }
-
-  protected List<AirbyteMessage> getAirbyteMessagesForTablesWithQuoting(final ConfiguredAirbyteStream streamForTableWithSpaces) {
-    return getTestMessages()
+    final List<AirbyteMessage> secondStreamExpectedMessages = getTestMessages()
         .stream()
         .map(Jsons::clone)
         .peek(m -> {
@@ -556,6 +481,12 @@ public abstract class JdbcSourceAcceptanceTest {
               convertIdBasedOnDatabase(m.getRecord().getData().get(COL_ID).asInt()));
         })
         .collect(Collectors.toList());
+    final List<AirbyteMessage> expectedMessages = new ArrayList<>(getTestMessages());
+    expectedMessages.addAll(secondStreamExpectedMessages);
+
+    assertTrue(expectedMessages.size() == actualMessages.size());
+    assertTrue(expectedMessages.containsAll(actualMessages));
+    assertTrue(actualMessages.containsAll(expectedMessages));
   }
 
   @SuppressWarnings("ResultOfMethodCallIgnored")
@@ -564,7 +495,7 @@ public abstract class JdbcSourceAcceptanceTest {
     final ConfiguredAirbyteStream spiedAbStream = spy(
         getConfiguredCatalogWithOneStream(getDefaultNamespace()).getStreams().get(0));
     final ConfiguredAirbyteCatalog catalog = new ConfiguredAirbyteCatalog()
-        .withStreams(List.of(spiedAbStream));
+        .withStreams(Lists.newArrayList(spiedAbStream));
     doCallRealMethod().doThrow(new RuntimeException()).when(spiedAbStream).getStream();
 
     assertThrows(RuntimeException.class, () -> source.read(config, catalog, null));
@@ -576,7 +507,7 @@ public abstract class JdbcSourceAcceptanceTest {
         COL_ID,
         null,
         "3",
-        getTestMessages());
+        Lists.newArrayList(getTestMessages()));
   }
 
   @Test
@@ -585,7 +516,7 @@ public abstract class JdbcSourceAcceptanceTest {
         COL_ID,
         "2",
         "3",
-        List.of(getTestMessages().get(2)));
+        Lists.newArrayList(getTestMessages().get(2)));
   }
 
   @Test
@@ -594,24 +525,13 @@ public abstract class JdbcSourceAcceptanceTest {
         COL_NAME,
         "patent",
         "vash",
-        List.of(getTestMessages().get(0), getTestMessages().get(2)));
+        Lists.newArrayList(getTestMessages().get(0), getTestMessages().get(2)));
   }
 
   @Test
   void testIncrementalStringCheckCursorSpaceInColumnName() throws Exception {
     final ConfiguredAirbyteStream streamWithSpaces = createTableWithSpaces();
 
-    final List<AirbyteMessage> expectedRecordMessages = getAirbyteMessagesCheckCursorSpaceInColumnName(streamWithSpaces);
-    incrementalCursorCheck(
-        COL_LAST_NAME_WITH_SPACE,
-        COL_LAST_NAME_WITH_SPACE,
-        "patent",
-        "vash",
-        expectedRecordMessages,
-        streamWithSpaces);
-  }
-
-  protected List<AirbyteMessage> getAirbyteMessagesCheckCursorSpaceInColumnName(final ConfiguredAirbyteStream streamWithSpaces) {
     final AirbyteMessage firstMessage = getTestMessages().get(0);
     firstMessage.getRecord().setStream(streamWithSpaces.getStream().getName());
     ((ObjectNode) firstMessage.getRecord().getData()).remove(COL_UPDATED_AT);
@@ -624,20 +544,28 @@ public abstract class JdbcSourceAcceptanceTest {
     ((ObjectNode) secondMessage.getRecord().getData()).set(COL_LAST_NAME_WITH_SPACE,
         ((ObjectNode) secondMessage.getRecord().getData()).remove(COL_NAME));
 
-    return List.of(firstMessage, secondMessage);
+    Lists.newArrayList(getTestMessages().get(0), getTestMessages().get(2));
+
+    incrementalCursorCheck(
+        COL_LAST_NAME_WITH_SPACE,
+        COL_LAST_NAME_WITH_SPACE,
+        "patent",
+        "vash",
+        Lists.newArrayList(firstMessage, secondMessage),
+        streamWithSpaces);
   }
 
   @Test
-  void testIncrementalDateCheckCursor() throws Exception {
-    incrementalDateCheck();
+  void testIncrementalTimestampCheckCursor() throws Exception {
+    incrementalTimestampCheck();
   }
 
-  protected void incrementalDateCheck() throws Exception {
+  protected void incrementalTimestampCheck() throws Exception {
     incrementalCursorCheck(
         COL_UPDATED_AT,
-        "2005-10-18",
-        "2006-10-19",
-        List.of(getTestMessages().get(1), getTestMessages().get(2)));
+        "2005-10-18T00:00:00Z",
+        "2006-10-19T00:00:00Z",
+        Lists.newArrayList(getTestMessages().get(1), getTestMessages().get(2)));
   }
 
   @Test
@@ -650,7 +578,7 @@ public abstract class JdbcSourceAcceptanceTest {
         // records to (incorrectly) be filtered out.
         "data",
         "vash",
-        getTestMessages());
+        Lists.newArrayList(getTestMessages()));
   }
 
   @Test
@@ -659,34 +587,19 @@ public abstract class JdbcSourceAcceptanceTest {
     final ConfiguredAirbyteCatalog configuredCatalog = getConfiguredCatalogWithOneStream(namespace);
     configuredCatalog.getStreams().forEach(airbyteStream -> {
       airbyteStream.setSyncMode(SyncMode.INCREMENTAL);
-      airbyteStream.setCursorField(List.of(COL_ID));
+      airbyteStream.setCursorField(Lists.newArrayList(COL_ID));
       airbyteStream.setDestinationSyncMode(DestinationSyncMode.APPEND);
     });
 
+    final DbState state = new DbState()
+        .withStreams(Lists.newArrayList(new DbStreamState().withStreamName(streamName).withStreamNamespace(namespace)));
     final List<AirbyteMessage> actualMessagesFirstSync = MoreIterators
-        .toList(source.read(config, configuredCatalog, createEmptyState(streamName, namespace)));
+        .toList(source.read(config, configuredCatalog, Jsons.jsonNode(state)));
 
     final Optional<AirbyteMessage> stateAfterFirstSyncOptional = actualMessagesFirstSync.stream()
         .filter(r -> r.getType() == Type.STATE).findFirst();
     assertTrue(stateAfterFirstSyncOptional.isPresent());
 
-    executeStatementReadIncrementallyTwice();
-
-    final List<AirbyteMessage> actualMessagesSecondSync = MoreIterators
-        .toList(source.read(config, configuredCatalog, extractState(stateAfterFirstSyncOptional.get())));
-
-    assertEquals(2,
-        (int) actualMessagesSecondSync.stream().filter(r -> r.getType() == Type.RECORD).count());
-    final List<AirbyteMessage> expectedMessages = getExpectedAirbyteMessagesSecondSync(namespace);
-
-    setEmittedAtToNull(actualMessagesSecondSync);
-
-    assertEquals(expectedMessages.size(), actualMessagesSecondSync.size());
-    assertTrue(expectedMessages.containsAll(actualMessagesSecondSync));
-    assertTrue(actualMessagesSecondSync.containsAll(expectedMessages));
-  }
-
-  protected void executeStatementReadIncrementallyTwice() throws SQLException {
     database.execute(connection -> {
       connection.createStatement().execute(
           String.format("INSERT INTO %s(id, name, updated_at) VALUES (4,'riker', '2006-10-19')",
@@ -695,29 +608,46 @@ public abstract class JdbcSourceAcceptanceTest {
           String.format("INSERT INTO %s(id, name, updated_at) VALUES (5, 'data', '2006-10-19')",
               getFullyQualifiedTableName(TABLE_NAME)));
     });
+
+    final List<AirbyteMessage> actualMessagesSecondSync = MoreIterators
+        .toList(source.read(config, configuredCatalog,
+            stateAfterFirstSyncOptional.get().getState().getData()));
+
+    assertEquals(2,
+        (int) actualMessagesSecondSync.stream().filter(r -> r.getType() == Type.RECORD).count());
+    final List<AirbyteMessage> expectedMessages = getExpectedAirbyteMessagesSecondSync(namespace);
+
+    setEmittedAtToNull(actualMessagesSecondSync);
+
+    assertTrue(expectedMessages.size() == actualMessagesSecondSync.size());
+    assertTrue(expectedMessages.containsAll(actualMessagesSecondSync));
+    assertTrue(actualMessagesSecondSync.containsAll(expectedMessages));
   }
 
-  protected List<AirbyteMessage> getExpectedAirbyteMessagesSecondSync(final String namespace) {
+  protected List<AirbyteMessage> getExpectedAirbyteMessagesSecondSync(String namespace) {
     final List<AirbyteMessage> expectedMessages = new ArrayList<>();
     expectedMessages.add(new AirbyteMessage().withType(Type.RECORD)
         .withRecord(new AirbyteRecordMessage().withStream(streamName).withNamespace(namespace)
-            .withData(Jsons.jsonNode(Map
+            .withData(Jsons.jsonNode(ImmutableMap
                 .of(COL_ID, ID_VALUE_4,
                     COL_NAME, "riker",
-                    COL_UPDATED_AT, "2006-10-19")))));
+                    COL_UPDATED_AT, "2006-10-19T00:00:00Z")))));
     expectedMessages.add(new AirbyteMessage().withType(Type.RECORD)
         .withRecord(new AirbyteRecordMessage().withStream(streamName).withNamespace(namespace)
-            .withData(Jsons.jsonNode(Map
+            .withData(Jsons.jsonNode(ImmutableMap
                 .of(COL_ID, ID_VALUE_5,
                     COL_NAME, "data",
-                    COL_UPDATED_AT, "2006-10-19")))));
-    final DbStreamState state = new DbStreamState()
-        .withStreamName(streamName)
-        .withStreamNamespace(namespace)
-        .withCursorField(List.of(COL_ID))
-        .withCursor("5")
-        .withCursorRecordCount(1L);
-    expectedMessages.addAll(createExpectedTestMessages(List.of(state)));
+                    COL_UPDATED_AT, "2006-10-19T00:00:00Z")))));
+    expectedMessages.add(new AirbyteMessage()
+        .withType(Type.STATE)
+        .withState(new AirbyteStateMessage()
+            .withData(Jsons.jsonNode(new DbState()
+                .withCdc(false)
+                .withStreams(Lists.newArrayList(new DbStreamState()
+                    .withStreamName(streamName)
+                    .withStreamNamespace(namespace)
+                    .withCursorField(ImmutableList.of(COL_ID))
+                    .withCursor("5")))))));
     return expectedMessages;
   }
 
@@ -749,12 +679,14 @@ public abstract class JdbcSourceAcceptanceTest {
         Field.of(COL_NAME, JsonSchemaType.STRING)));
     configuredCatalog.getStreams().forEach(airbyteStream -> {
       airbyteStream.setSyncMode(SyncMode.INCREMENTAL);
-      airbyteStream.setCursorField(List.of(COL_ID));
+      airbyteStream.setCursorField(Lists.newArrayList(COL_ID));
       airbyteStream.setDestinationSyncMode(DestinationSyncMode.APPEND);
     });
 
+    final DbState state = new DbState()
+        .withStreams(Lists.newArrayList(new DbStreamState().withStreamName(streamName).withStreamNamespace(namespace)));
     final List<AirbyteMessage> actualMessagesFirstSync = MoreIterators
-        .toList(source.read(config, configuredCatalog, createEmptyState(streamName, namespace)));
+        .toList(source.read(config, configuredCatalog, Jsons.jsonNode(state)));
 
     // get last state message.
     final Optional<AirbyteMessage> stateAfterFirstSyncOptional = actualMessagesFirstSync.stream()
@@ -764,50 +696,7 @@ public abstract class JdbcSourceAcceptanceTest {
 
     // we know the second streams messages are the same as the first minus the updated at column. so we
     // cheat and generate the expected messages off of the first expected messages.
-    final List<AirbyteMessage> secondStreamExpectedMessages = getAirbyteMessagesSecondStreamWithNamespace(streamName2);
-
-    // Represents the state after the first stream has been updated
-    final List<DbStreamState> expectedStateStreams1 = List.of(
-        new DbStreamState()
-            .withStreamName(streamName)
-            .withStreamNamespace(namespace)
-            .withCursorField(List.of(COL_ID))
-            .withCursor("3")
-            .withCursorRecordCount(1L),
-        new DbStreamState()
-            .withStreamName(streamName2)
-            .withStreamNamespace(namespace)
-            .withCursorField(List.of(COL_ID)));
-
-    // Represents the state after both streams have been updated
-    final List<DbStreamState> expectedStateStreams2 = List.of(
-        new DbStreamState()
-            .withStreamName(streamName)
-            .withStreamNamespace(namespace)
-            .withCursorField(List.of(COL_ID))
-            .withCursor("3")
-            .withCursorRecordCount(1L),
-        new DbStreamState()
-            .withStreamName(streamName2)
-            .withStreamNamespace(namespace)
-            .withCursorField(List.of(COL_ID))
-            .withCursor("3")
-            .withCursorRecordCount(1L));
-
-    final List<AirbyteMessage> expectedMessagesFirstSync = new ArrayList<>(getTestMessages());
-    expectedMessagesFirstSync.add(createStateMessage(expectedStateStreams1.get(0), expectedStateStreams1));
-    expectedMessagesFirstSync.addAll(secondStreamExpectedMessages);
-    expectedMessagesFirstSync.add(createStateMessage(expectedStateStreams2.get(1), expectedStateStreams2));
-
-    setEmittedAtToNull(actualMessagesFirstSync);
-
-    assertEquals(expectedMessagesFirstSync.size(), actualMessagesFirstSync.size());
-    assertTrue(expectedMessagesFirstSync.containsAll(actualMessagesFirstSync));
-    assertTrue(actualMessagesFirstSync.containsAll(expectedMessagesFirstSync));
-  }
-
-  protected List<AirbyteMessage> getAirbyteMessagesSecondStreamWithNamespace(final String streamName2) {
-    return getTestMessages()
+    final List<AirbyteMessage> secondStreamExpectedMessages = getTestMessages()
         .stream()
         .map(Jsons::clone)
         .peek(m -> {
@@ -817,6 +706,46 @@ public abstract class JdbcSourceAcceptanceTest {
               convertIdBasedOnDatabase(m.getRecord().getData().get(COL_ID).asInt()));
         })
         .collect(Collectors.toList());
+    final List<AirbyteMessage> expectedMessagesFirstSync = new ArrayList<>(getTestMessages());
+    expectedMessagesFirstSync.add(new AirbyteMessage()
+        .withType(Type.STATE)
+        .withState(new AirbyteStateMessage()
+            .withData(Jsons.jsonNode(new DbState()
+                .withCdc(false)
+                .withStreams(Lists.newArrayList(
+                    new DbStreamState()
+                        .withStreamName(streamName)
+                        .withStreamNamespace(namespace)
+                        .withCursorField(ImmutableList.of(COL_ID))
+                        .withCursor("3"),
+                    new DbStreamState()
+                        .withStreamName(streamName2)
+                        .withStreamNamespace(namespace)
+                        .withCursorField(ImmutableList.of(COL_ID))))))));
+
+    expectedMessagesFirstSync.addAll(secondStreamExpectedMessages);
+    expectedMessagesFirstSync.add(new AirbyteMessage()
+        .withType(Type.STATE)
+        .withState(new AirbyteStateMessage()
+            .withData(Jsons.jsonNode(new DbState()
+                .withCdc(false)
+                .withStreams(Lists.newArrayList(
+                    new DbStreamState()
+                        .withStreamName(streamName)
+                        .withStreamNamespace(namespace)
+                        .withCursorField(ImmutableList.of(COL_ID))
+                        .withCursor("3"),
+                    new DbStreamState()
+                        .withStreamName(streamName2)
+                        .withStreamNamespace(namespace)
+                        .withCursorField(ImmutableList.of(COL_ID))
+                        .withCursor("3")))))));
+
+    setEmittedAtToNull(actualMessagesFirstSync);
+
+    assertTrue(expectedMessagesFirstSync.size() == actualMessagesFirstSync.size());
+    assertTrue(expectedMessagesFirstSync.containsAll(actualMessagesFirstSync));
+    assertTrue(actualMessagesFirstSync.containsAll(expectedMessagesFirstSync));
   }
 
   // when initial and final cursor fields are the same.
@@ -828,111 +757,6 @@ public abstract class JdbcSourceAcceptanceTest {
       throws Exception {
     incrementalCursorCheck(cursorField, cursorField, initialCursorValue, endCursorValue,
         expectedRecordMessages);
-  }
-
-  // See https://github.com/airbytehq/airbyte/issues/14732 for rationale and details.
-  @Test
-  void testIncrementalWithConcurrentInsertion() throws Exception {
-    final String namespace = getDefaultNamespace();
-    final String fullyQualifiedTableName = getFullyQualifiedTableName(TABLE_NAME_AND_TIMESTAMP);
-    final String columnDefinition = String.format("name VARCHAR(200) NOT NULL, timestamp %s NOT NULL", COL_TIMESTAMP_TYPE);
-
-    // 1st sync
-    database.execute(ctx -> {
-      ctx.createStatement().execute(createTableQuery(fullyQualifiedTableName, columnDefinition, ""));
-      ctx.createStatement().execute(String.format(INSERT_TABLE_NAME_AND_TIMESTAMP_QUERY, fullyQualifiedTableName, "a", "2021-01-01 00:00:00"));
-      ctx.createStatement().execute(String.format(INSERT_TABLE_NAME_AND_TIMESTAMP_QUERY, fullyQualifiedTableName, "b", "2021-01-01 00:00:00"));
-    });
-
-    final ConfiguredAirbyteCatalog configuredCatalog = CatalogHelpers.toDefaultConfiguredCatalog(
-        new AirbyteCatalog().withStreams(List.of(
-            CatalogHelpers.createAirbyteStream(
-                TABLE_NAME_AND_TIMESTAMP,
-                namespace,
-                Field.of(COL_NAME, JsonSchemaType.STRING),
-                Field.of(COL_TIMESTAMP, JsonSchemaType.STRING_TIMESTAMP_WITHOUT_TIMEZONE)))));
-    configuredCatalog.getStreams().forEach(airbyteStream -> {
-      airbyteStream.setSyncMode(SyncMode.INCREMENTAL);
-      airbyteStream.setCursorField(List.of(COL_TIMESTAMP));
-      airbyteStream.setDestinationSyncMode(DestinationSyncMode.APPEND);
-    });
-
-    final List<AirbyteMessage> firstSyncActualMessages = MoreIterators.toList(
-        source.read(config, configuredCatalog, createEmptyState(TABLE_NAME_AND_TIMESTAMP, namespace)));
-
-    // cursor after 1st sync: 2021-01-01 00:00:00, count 2
-    final Optional<AirbyteMessage> firstSyncStateOptional = firstSyncActualMessages.stream().filter(r -> r.getType() == Type.STATE).findFirst();
-    assertTrue(firstSyncStateOptional.isPresent());
-    final JsonNode firstSyncState = getStateData(firstSyncStateOptional.get(), TABLE_NAME_AND_TIMESTAMP);
-    assertEquals(firstSyncState.get("cursor_field").elements().next().asText(), COL_TIMESTAMP);
-    assertTrue(firstSyncState.get("cursor").asText().contains("2021-01-01"));
-    assertTrue(firstSyncState.get("cursor").asText().contains("00:00:00"));
-    assertEquals(2L, firstSyncState.get("cursor_record_count").asLong());
-
-    final List<String> firstSyncNames = firstSyncActualMessages.stream()
-        .filter(r -> r.getType() == Type.RECORD)
-        .map(r -> r.getRecord().getData().get(COL_NAME).asText())
-        .toList();
-    assertEquals(List.of("a", "b"), firstSyncNames);
-
-    // 2nd sync
-    database.execute(ctx -> {
-      ctx.createStatement().execute(String.format(INSERT_TABLE_NAME_AND_TIMESTAMP_QUERY, fullyQualifiedTableName, "c", "2021-01-02 00:00:00"));
-    });
-
-    final List<AirbyteMessage> secondSyncActualMessages = MoreIterators.toList(
-        source.read(config, configuredCatalog, createState(TABLE_NAME_AND_TIMESTAMP, namespace, firstSyncState)));
-
-    // cursor after 2nd sync: 2021-01-02 00:00:00, count 1
-    final Optional<AirbyteMessage> secondSyncStateOptional = secondSyncActualMessages.stream().filter(r -> r.getType() == Type.STATE).findFirst();
-    assertTrue(secondSyncStateOptional.isPresent());
-    final JsonNode secondSyncState = getStateData(secondSyncStateOptional.get(), TABLE_NAME_AND_TIMESTAMP);
-    assertEquals(secondSyncState.get("cursor_field").elements().next().asText(), COL_TIMESTAMP);
-    assertTrue(secondSyncState.get("cursor").asText().contains("2021-01-02"));
-    assertTrue(secondSyncState.get("cursor").asText().contains("00:00:00"));
-    assertEquals(1L, secondSyncState.get("cursor_record_count").asLong());
-
-    final List<String> secondSyncNames = secondSyncActualMessages.stream()
-        .filter(r -> r.getType() == Type.RECORD)
-        .map(r -> r.getRecord().getData().get(COL_NAME).asText())
-        .toList();
-    assertEquals(List.of("c"), secondSyncNames);
-
-    // 3rd sync has records with duplicated cursors
-    database.execute(ctx -> {
-      ctx.createStatement().execute(String.format(INSERT_TABLE_NAME_AND_TIMESTAMP_QUERY, fullyQualifiedTableName, "d", "2021-01-02 00:00:00"));
-      ctx.createStatement().execute(String.format(INSERT_TABLE_NAME_AND_TIMESTAMP_QUERY, fullyQualifiedTableName, "e", "2021-01-02 00:00:00"));
-      ctx.createStatement().execute(String.format(INSERT_TABLE_NAME_AND_TIMESTAMP_QUERY, fullyQualifiedTableName, "f", "2021-01-03 00:00:00"));
-    });
-
-    final List<AirbyteMessage> thirdSyncActualMessages = MoreIterators.toList(
-        source.read(config, configuredCatalog, createState(TABLE_NAME_AND_TIMESTAMP, namespace, secondSyncState)));
-
-    // Cursor after 3rd sync is: 2021-01-03 00:00:00, count 1.
-    final Optional<AirbyteMessage> thirdSyncStateOptional = thirdSyncActualMessages.stream().filter(r -> r.getType() == Type.STATE).findFirst();
-    assertTrue(thirdSyncStateOptional.isPresent());
-    final JsonNode thirdSyncState = getStateData(thirdSyncStateOptional.get(), TABLE_NAME_AND_TIMESTAMP);
-    assertEquals(thirdSyncState.get("cursor_field").elements().next().asText(), COL_TIMESTAMP);
-    assertTrue(thirdSyncState.get("cursor").asText().contains("2021-01-03"));
-    assertTrue(thirdSyncState.get("cursor").asText().contains("00:00:00"));
-    assertEquals(1L, thirdSyncState.get("cursor_record_count").asLong());
-
-    // The c, d, e, f are duplicated records from this sync, because the cursor
-    // record count in the database is different from that in the state.
-    final List<String> thirdSyncExpectedNames = thirdSyncActualMessages.stream()
-        .filter(r -> r.getType() == Type.RECORD)
-        .map(r -> r.getRecord().getData().get(COL_NAME).asText())
-        .toList();
-    assertEquals(List.of("c", "d", "e", "f"), thirdSyncExpectedNames);
-  }
-
-  private JsonNode getStateData(final AirbyteMessage airbyteMessage, final String streamName) {
-    for (final JsonNode stream : airbyteMessage.getState().getData().get("streams")) {
-      if (stream.get("stream_name").asText().equals(streamName)) {
-        return stream;
-      }
-    }
-    throw new IllegalArgumentException("Stream not found in state message: " + streamName);
   }
 
   private void incrementalCursorCheck(
@@ -956,35 +780,37 @@ public abstract class JdbcSourceAcceptanceTest {
                                       final ConfiguredAirbyteStream airbyteStream)
       throws Exception {
     airbyteStream.setSyncMode(SyncMode.INCREMENTAL);
-    airbyteStream.setCursorField(List.of(cursorField));
+    airbyteStream.setCursorField(Lists.newArrayList(cursorField));
     airbyteStream.setDestinationSyncMode(DestinationSyncMode.APPEND);
 
-    final ConfiguredAirbyteCatalog configuredCatalog = new ConfiguredAirbyteCatalog()
-        .withStreams(List.of(airbyteStream));
+    final DbState state = new DbState()
+        .withStreams(Lists.newArrayList(new DbStreamState()
+            .withStreamName(airbyteStream.getStream().getName())
+            .withStreamNamespace(airbyteStream.getStream().getNamespace())
+            .withCursorField(ImmutableList.of(initialCursorField))
+            .withCursor(initialCursorValue)));
 
-    final DbStreamState dbStreamState = new DbStreamState()
-        .withStreamName(airbyteStream.getStream().getName())
-        .withStreamNamespace(airbyteStream.getStream().getNamespace())
-        .withCursorField(List.of(initialCursorField))
-        .withCursor(initialCursorValue)
-        .withCursorRecordCount(1L);
+    final ConfiguredAirbyteCatalog configuredCatalog = new ConfiguredAirbyteCatalog()
+        .withStreams(ImmutableList.of(airbyteStream));
 
     final List<AirbyteMessage> actualMessages = MoreIterators
-        .toList(source.read(config, configuredCatalog, Jsons.jsonNode(createState(List.of(dbStreamState)))));
+        .toList(source.read(config, configuredCatalog, Jsons.jsonNode(state)));
 
     setEmittedAtToNull(actualMessages);
 
-    final List<DbStreamState> expectedStreams = List.of(
-        new DbStreamState()
-            .withStreamName(airbyteStream.getStream().getName())
-            .withStreamNamespace(airbyteStream.getStream().getNamespace())
-            .withCursorField(List.of(cursorField))
-            .withCursor(endCursorValue)
-            .withCursorRecordCount(1L));
     final List<AirbyteMessage> expectedMessages = new ArrayList<>(expectedRecordMessages);
-    expectedMessages.addAll(createExpectedTestMessages(expectedStreams));
+    expectedMessages.add(new AirbyteMessage()
+        .withType(Type.STATE)
+        .withState(new AirbyteStateMessage()
+            .withData(Jsons.jsonNode(new DbState()
+                .withCdc(false)
+                .withStreams(Lists.newArrayList(new DbStreamState()
+                    .withStreamName(airbyteStream.getStream().getName())
+                    .withStreamNamespace(airbyteStream.getStream().getNamespace())
+                    .withCursorField(ImmutableList.of(cursorField))
+                    .withCursor(endCursorValue)))))));
 
-    assertEquals(expectedMessages.size(), actualMessages.size());
+    assertTrue(expectedMessages.size() == actualMessages.size());
     assertTrue(expectedMessages.containsAll(actualMessages));
     assertTrue(actualMessages.containsAll(expectedMessages));
   }
@@ -1000,22 +826,22 @@ public abstract class JdbcSourceAcceptanceTest {
   }
 
   protected AirbyteCatalog getCatalog(final String defaultNamespace) {
-    return new AirbyteCatalog().withStreams(List.of(
+    return new AirbyteCatalog().withStreams(Lists.newArrayList(
         CatalogHelpers.createAirbyteStream(
             TABLE_NAME,
             defaultNamespace,
-            Field.of(COL_ID, JsonSchemaType.INTEGER),
+            Field.of(COL_ID, JsonSchemaType.NUMBER),
             Field.of(COL_NAME, JsonSchemaType.STRING),
             Field.of(COL_UPDATED_AT, JsonSchemaType.STRING))
-            .withSupportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL))
+            .withSupportedSyncModes(Lists.newArrayList(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL))
             .withSourceDefinedPrimaryKey(List.of(List.of(COL_ID))),
         CatalogHelpers.createAirbyteStream(
             TABLE_NAME_WITHOUT_PK,
             defaultNamespace,
-            Field.of(COL_ID, JsonSchemaType.INTEGER),
+            Field.of(COL_ID, JsonSchemaType.NUMBER),
             Field.of(COL_NAME, JsonSchemaType.STRING),
             Field.of(COL_UPDATED_AT, JsonSchemaType.STRING))
-            .withSupportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL))
+            .withSupportedSyncModes(Lists.newArrayList(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL))
             .withSourceDefinedPrimaryKey(Collections.emptyList()),
         CatalogHelpers.createAirbyteStream(
             TABLE_NAME_COMPOSITE_PK,
@@ -1023,60 +849,32 @@ public abstract class JdbcSourceAcceptanceTest {
             Field.of(COL_FIRST_NAME, JsonSchemaType.STRING),
             Field.of(COL_LAST_NAME, JsonSchemaType.STRING),
             Field.of(COL_UPDATED_AT, JsonSchemaType.STRING))
-            .withSupportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL))
+            .withSupportedSyncModes(Lists.newArrayList(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL))
             .withSourceDefinedPrimaryKey(
                 List.of(List.of(COL_FIRST_NAME), List.of(COL_LAST_NAME)))));
   }
 
   protected List<AirbyteMessage> getTestMessages() {
-    return List.of(
+    return Lists.newArrayList(
         new AirbyteMessage().withType(Type.RECORD)
             .withRecord(new AirbyteRecordMessage().withStream(streamName).withNamespace(getDefaultNamespace())
-                .withData(Jsons.jsonNode(Map
+                .withData(Jsons.jsonNode(ImmutableMap
                     .of(COL_ID, ID_VALUE_1,
                         COL_NAME, "picard",
-                        COL_UPDATED_AT, "2004-10-19")))),
+                        COL_UPDATED_AT, "2004-10-19T00:00:00Z")))),
         new AirbyteMessage().withType(Type.RECORD)
             .withRecord(new AirbyteRecordMessage().withStream(streamName).withNamespace(getDefaultNamespace())
-                .withData(Jsons.jsonNode(Map
+                .withData(Jsons.jsonNode(ImmutableMap
                     .of(COL_ID, ID_VALUE_2,
                         COL_NAME, "crusher",
                         COL_UPDATED_AT,
-                        "2005-10-19")))),
+                        "2005-10-19T00:00:00Z")))),
         new AirbyteMessage().withType(Type.RECORD)
             .withRecord(new AirbyteRecordMessage().withStream(streamName).withNamespace(getDefaultNamespace())
-                .withData(Jsons.jsonNode(Map
+                .withData(Jsons.jsonNode(ImmutableMap
                     .of(COL_ID, ID_VALUE_3,
                         COL_NAME, "vash",
-                        COL_UPDATED_AT, "2006-10-19")))));
-  }
-
-  protected List<AirbyteMessage> createExpectedTestMessages(final List<DbStreamState> states) {
-    return supportsPerStream()
-        ? states.stream()
-            .map(s -> new AirbyteMessage().withType(Type.STATE)
-                .withState(
-                    new AirbyteStateMessage().withType(AirbyteStateType.STREAM)
-                        .withStream(new AirbyteStreamState()
-                            .withStreamDescriptor(new StreamDescriptor().withNamespace(s.getStreamNamespace()).withName(s.getStreamName()))
-                            .withStreamState(Jsons.jsonNode(s)))
-                        .withData(Jsons.jsonNode(new DbState().withCdc(false).withStreams(states)))))
-            .collect(
-                Collectors.toList())
-        : List.of(new AirbyteMessage().withType(Type.STATE).withState(new AirbyteStateMessage().withType(AirbyteStateType.LEGACY)
-            .withData(Jsons.jsonNode(new DbState().withCdc(false).withStreams(states)))));
-  }
-
-  protected List<AirbyteStateMessage> createState(final List<DbStreamState> states) {
-    return supportsPerStream()
-        ? states.stream()
-            .map(s -> new AirbyteStateMessage().withType(AirbyteStateType.STREAM)
-                .withStream(new AirbyteStreamState()
-                    .withStreamDescriptor(new StreamDescriptor().withNamespace(s.getStreamNamespace()).withName(s.getStreamName()))
-                    .withStreamState(Jsons.jsonNode(s))))
-            .collect(
-                Collectors.toList())
-        : List.of(new AirbyteStateMessage().withType(AirbyteStateType.LEGACY).withData(Jsons.jsonNode(new DbState().withStreams(states))));
+                        COL_UPDATED_AT, "2006-10-19T00:00:00Z")))));
   }
 
   protected ConfiguredAirbyteStream createTableWithSpaces() throws SQLException {
@@ -1084,29 +882,29 @@ public abstract class JdbcSourceAcceptanceTest {
     final String streamName2 = tableNameWithSpaces;
 
     database.execute(connection -> {
-      final String identifierQuoteString = connection.getMetaData().getIdentifierQuoteString();
       connection.createStatement()
           .execute(
               createTableQuery(getFullyQualifiedTableName(
-                  enquoteIdentifier(tableNameWithSpaces, identifierQuoteString)),
-                  "id INTEGER, " + enquoteIdentifier(COL_LAST_NAME_WITH_SPACE, identifierQuoteString)
+                  sourceOperations.enquoteIdentifier(connection, tableNameWithSpaces)),
+                  "id INTEGER, " + sourceOperations
+                      .enquoteIdentifier(connection, COL_LAST_NAME_WITH_SPACE)
                       + " VARCHAR(200)",
                   ""));
       connection.createStatement()
           .execute(String.format("INSERT INTO %s(id, %s) VALUES (1,'picard')",
               getFullyQualifiedTableName(
-                  enquoteIdentifier(tableNameWithSpaces, identifierQuoteString)),
-              enquoteIdentifier(COL_LAST_NAME_WITH_SPACE, identifierQuoteString)));
+                  sourceOperations.enquoteIdentifier(connection, tableNameWithSpaces)),
+              sourceOperations.enquoteIdentifier(connection, COL_LAST_NAME_WITH_SPACE)));
       connection.createStatement()
           .execute(String.format("INSERT INTO %s(id, %s) VALUES (2, 'crusher')",
               getFullyQualifiedTableName(
-                  enquoteIdentifier(tableNameWithSpaces, identifierQuoteString)),
-              enquoteIdentifier(COL_LAST_NAME_WITH_SPACE, identifierQuoteString)));
+                  sourceOperations.enquoteIdentifier(connection, tableNameWithSpaces)),
+              sourceOperations.enquoteIdentifier(connection, COL_LAST_NAME_WITH_SPACE)));
       connection.createStatement()
           .execute(String.format("INSERT INTO %s(id, %s) VALUES (3, 'vash')",
               getFullyQualifiedTableName(
-                  enquoteIdentifier(tableNameWithSpaces, identifierQuoteString)),
-              enquoteIdentifier(COL_LAST_NAME_WITH_SPACE, identifierQuoteString)));
+                  sourceOperations.enquoteIdentifier(connection, tableNameWithSpaces)),
+              sourceOperations.enquoteIdentifier(connection, COL_LAST_NAME_WITH_SPACE)));
     });
 
     return CatalogHelpers.createConfiguredAirbyteStream(
@@ -1117,7 +915,7 @@ public abstract class JdbcSourceAcceptanceTest {
   }
 
   public String getFullyQualifiedTableName(final String tableName) {
-    return RelationalDbQueryUtils.getFullyQualifiedTableName(getDefaultSchemaName(), tableName);
+    return sourceOperations.getFullyQualifiedTableName(getDefaultSchemaName(), tableName);
   }
 
   public void createSchemas() throws SQLException {
@@ -1155,7 +953,7 @@ public abstract class JdbcSourceAcceptanceTest {
   protected String getDefaultNamespace() {
     // mysql does not support schemas. it namespaces using database names instead.
     if (getDriverClass().toLowerCase().contains("mysql") || getDriverClass().toLowerCase().contains("clickhouse")) {
-      return config.get(JdbcUtils.DATABASE_KEY).asText();
+      return config.get("database").asText();
     } else {
       return SCHEMA_NAME;
     }
@@ -1166,91 +964,6 @@ public abstract class JdbcSourceAcceptanceTest {
       if (actualMessage.getRecord() != null) {
         actualMessage.getRecord().setEmittedAt(null);
       }
-    }
-  }
-
-  /**
-   * Tests whether the connector under test supports the per-stream state format or should use the
-   * legacy format for data generated by this test.
-   *
-   * @return {@code true} if the connector supports the per-stream state format or {@code false} if it
-   *         does not support the per-stream state format (e.g. legacy format supported). Default
-   *         value is {@code false}.
-   */
-  protected boolean supportsPerStream() {
-    return false;
-  }
-
-  /**
-   * Creates empty state with the provided stream name and namespace.
-   *
-   * @param streamName The stream name.
-   * @param streamNamespace The stream namespace.
-   * @return {@link JsonNode} representation of the generated empty state.
-   */
-  protected JsonNode createEmptyState(final String streamName, final String streamNamespace) {
-    if (supportsPerStream()) {
-      final AirbyteStateMessage airbyteStateMessage = new AirbyteStateMessage()
-          .withType(AirbyteStateType.STREAM)
-          .withStream(new AirbyteStreamState().withStreamDescriptor(new StreamDescriptor().withName(streamName).withNamespace(streamNamespace)));
-      return Jsons.jsonNode(List.of(airbyteStateMessage));
-    } else {
-      final DbState dbState = new DbState()
-          .withStreams(List.of(new DbStreamState().withStreamName(streamName).withStreamNamespace(streamNamespace)));
-      return Jsons.jsonNode(dbState);
-    }
-  }
-
-  protected JsonNode createState(final String streamName, final String streamNamespace, final JsonNode stateData) {
-    if (supportsPerStream()) {
-      final AirbyteStateMessage airbyteStateMessage = new AirbyteStateMessage()
-          .withType(AirbyteStateType.STREAM)
-          .withStream(
-              new AirbyteStreamState()
-                  .withStreamDescriptor(new StreamDescriptor().withName(streamName).withNamespace(streamNamespace))
-                  .withStreamState(stateData));
-      return Jsons.jsonNode(List.of(airbyteStateMessage));
-    } else {
-      final List<String> cursorFields = MoreIterators.toList(stateData.get("cursor_field").elements()).stream().map(JsonNode::asText).toList();
-      final DbState dbState = new DbState().withStreams(List.of(
-          new DbStreamState()
-              .withStreamName(streamName)
-              .withStreamNamespace(streamNamespace)
-              .withCursor(stateData.get("cursor").asText())
-              .withCursorField(cursorFields)
-              .withCursorRecordCount(stateData.get("cursor_record_count").asLong())));
-      return Jsons.jsonNode(dbState);
-    }
-  }
-
-  /**
-   * Extracts the state component from the provided {@link AirbyteMessage} based on the value returned
-   * by {@link #supportsPerStream()}.
-   *
-   * @param airbyteMessage An {@link AirbyteMessage} that contains state.
-   * @return A {@link JsonNode} representation of the state contained in the {@link AirbyteMessage}.
-   */
-  protected JsonNode extractState(final AirbyteMessage airbyteMessage) {
-    if (supportsPerStream()) {
-      return Jsons.jsonNode(List.of(airbyteMessage.getState()));
-    } else {
-      return airbyteMessage.getState().getData();
-    }
-  }
-
-  protected AirbyteMessage createStateMessage(final DbStreamState dbStreamState, final List<DbStreamState> legacyStates) {
-    if (supportsPerStream()) {
-      return new AirbyteMessage().withType(Type.STATE)
-          .withState(
-              new AirbyteStateMessage().withType(AirbyteStateType.STREAM)
-                  .withStream(new AirbyteStreamState()
-                      .withStreamDescriptor(new StreamDescriptor().withNamespace(dbStreamState.getStreamNamespace())
-                          .withName(dbStreamState.getStreamName()))
-                      .withStreamState(Jsons.jsonNode(dbStreamState)))
-                  .withData(Jsons.jsonNode(new DbState().withCdc(false).withStreams(legacyStates))));
-    } else {
-      return new AirbyteMessage().withType(Type.STATE).withState(new AirbyteStateMessage().withType(AirbyteStateType.LEGACY)
-          .withData(Jsons.jsonNode(new DbState().withCdc(false).withStreams(legacyStates))));
     }
   }
 
